fix broken styles

--- a/styles/Blog.module.css
+++ b/styles/Blog.module.css
@@ -163,4 +163,13 @@
   .blocks p {
     font-size: var(--fontSize-1);
   }
+  .blog a {
+    height: auto;
+    padding-bottom: 4rem;
+  }
+  .header {
+    .blog a {
+      padding-bottom: 0;
+    }
+  }
 }
