--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -228,7 +228,7 @@
 }
 .postContainer {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(310px, 1fr));
   gap: var(--spacing-10);
 }
 
